adding config files for continuous deployement

--- a/index.html
+++ b/index.html
@@ -24,15 +24,22 @@
         <div class="contentbox">
             <img src="images/DVJS_logo.png" style="height:200px;float:left;margin-right:20px;">
             <h2>Data Viz Jam Sessions</h2>
-            Data Viz Jam Sessions This is a relaxed group for data visualization enthusiasts looking for inspiration,
-            camaraderie, and collaboration. We're language-agnostic, multidisciplinary, and open to all skill and
-            experience levels. If you're starting from scratch, that's great. If you're already a pro, that's great,
-            too. Come make some awesome data art, ask questions, give help, or show-and-tell your latest project.
+            <b>Q: What is this?</b> <br>
+            A: Data Viz Jam Sessions, or as we call it for short, DVJS, is a community of data visualization experts and enthusiasts centered around Meetup events where we show off our work, ask questions, and connect with other folks in the field. We're language-agnostic, multidisciplinary, and open to all experience levels. We are born of one primary axiom: if what you want doesn't exist, make it.
             <br><br>
-            Data Viz Jam Sessions This is a relaxed group for data visualization enthusiasts looking for inspiration,
-            camaraderie, and collaboration. We're language-agnostic, multidisciplinary, and open to all skill and
-            experience levels. If you're starting from scratch, that's great. If you're already a pro, that's great,
-            too. Come make some awesome data art, ask questions, give help, or show-and-tell your latest project.
+            <b>Q: Where are you located?</b> <br>
+            A: Our first chapter started in 2016 in Seattle, Washington. We opened our second group a year later in the beautiful Montreal, Canada. <br><br>
+            <b>Q: What on Earth is that logo?</b> <br>
+            A: Jam is made out of smushed berries and everthing is cooler in space. Make sense? <br><br>
+            <b>Q: How can I get involved?</b> <br>
+            A: Check out our Seattle and Montreal chapters or connect with other creators through our Facebook group. Enjoy! 
+            <br>
+            <a href="https://www.meetup.com/Data-Viz-Jam-Sessions/">Seattle Events</a><br>
+            <a href="https://www.meetup.com/Data-Viz-Jam-Sessions-MTL/">Montreal Events</a><br>
+            <a href="https://www.facebook.com/groups/datavizjam/?ref=bookmarks">Facebook Group</a>
+            <br><br>
+            <b>Q: How can I help?</b><br>
+            A: That's so nice! Email Nancy at datavizjamsessions@gmail.com for business inquiries or wild ideas.
         </div>
         <div class="contentbox">
             <h2>Thanks to our supporters!</h2>
