--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/main.css">
-    <link href="https://fonts.googleapis.com/css?family=Arsenal|Assistant|Athiti|Black+And+White+Picture|Coda+Caption|Darker+Grotesque|Encode+Sans|Krona+One|Molengo|Nobile|Pavanam|Ramabhadra|Reem+Kufi|Thasadith&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css?family=Arsenal|Assistant|Athiti|Black+And+White+Picture|Coda+Caption|Darker+Grotesque|Encode+Sans|Krona+One|Molengo|Nobile|Pavanam|Ramabhadra|Reem+Kufi|Thasadith&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -23,14 +25,19 @@
             <img src="images/DVJS_logo.png" style="height:200px;float:left;margin-right:20px;">
             <h2>Data Viz Jam Sessions</h2>
             <b>Q: What is this?</b> <br>
-            A: Data Viz Jam Sessions, or as we call it for short, DVJS, is a community of data visualization experts and enthusiasts centered around Meetup events where we show off our work, ask questions, and connect with other folks in the field. We're language-agnostic, multidisciplinary, and open to all experience levels. We are born of one primary axiom: if what you want doesn't exist, make it.
+            A: Data Viz Jam Sessions, or as we call it for short, DVJS, is a community of data visualization experts and
+            enthusiasts centered around Meetup events where we show off our work, ask questions, and connect with other
+            folks in the field. We're language-agnostic, multidisciplinary, and open to all experience levels. We are
+            born of one primary axiom: if what you want doesn't exist, make it.
             <br><br>
             <b>Q: Where are you located?</b> <br>
-            A: Our first chapter started in 2016 in Seattle, Washington. We opened our second group a year later in the beautiful Montreal, Canada. <br><br>
+            A: Our first chapter started in 2016 in Seattle, Washington. We opened our second group a year later in the
+            beautiful Montreal, Canada. <br><br>
             <b>Q: What on Earth is that logo?</b> <br>
             A: Jam is made out of smushed berries and everthing is cooler in space. Make sense? <br><br>
             <b>Q: How can I get involved?</b> <br>
-            A: Check out our Seattle and Montreal chapters or connect with other creators through our Facebook group. Enjoy! 
+            A: Check out our Seattle and Montreal chapters or connect with other creators through our Facebook group.
+            Enjoy!
             <br>
             <a href="https://www.meetup.com/Data-Viz-Jam-Sessions/">Seattle Events</a><br>
             <a href="https://www.meetup.com/Data-Viz-Jam-Sessions-MTL/">Montreal Events</a><br>
@@ -38,6 +45,49 @@
             <br><br>
             <b>Q: How can I help?</b><br>
             A: That's so nice! Email Nancy at datavizjamsessions@gmail.com for business inquiries or wild ideas.
+        </div>
+        <div class="contentbox">
+            <h2>Community Event Details</h2>
+            <h4>Meeting Agendas</h4>
+            <table style="width:100%">
+                <tr>
+                        <td style="width:10%">12pm</td>
+                        <td>People start showing up. Find a seat and grab a cupcake!</td>
+                    </tr>
+                <tr>
+                    <td>12:15</td>
+                    <td>Time for introductions. Get ready to say your name, how you identify professionally, and answer
+                        the funny question of the week. If the turnout is sufficiently large we introduce ourselves to
+                        those sitting nearby.
+                    </td>
+                </tr>
+                <tr>
+                    <td>2-2pm</td>
+                    <td>Open up those projects and get cracking! Or, chat, relax, and bask in the glow of our community.
+                    </td>
+                </tr>
+                <tr>
+                    <td>2pm until...</td>
+                    <td>We have the tables reserved until 2pm but you are welcome to stay if no one else has a reservation. However, we’ll probably tidy up a bit and most folks will head out. 
+                    </td>
+                </tr>
+            </table>
+
+            <br><br>
+            <h4>But please remember…</h4>
+            <b>Monitor the volume.</b> This can be a noisy space but if we all speak softly the we can all feel heard.
+            <br>
+            <b>Respect different working styles. </b>Some folks prefer to focus and that’s totally fine! If you’re
+            feeling chatty there will always be someone else to share with.
+            <br>
+            <b>Be considerate.</b> This is a volunteer-run, free event. We love ideas but pointed complaints and
+            criticism are less helpful. Let the facilitator know if you are interested in becoming a dedicated resource
+            for the group.
+            <br>
+            <b>Data vis is for everyone.</b> This group is fortunate to have people from many backgrounds with a range
+            of experiences. Leave the competition at the door and come ready to challenge your own skills and
+            perspectives.
+
         </div>
         <div class="contentbox">
             <h2>Thanks to our supporters!</h2>
