Cleaning up site

--- a/blog.html
+++ b/blog.html
@@ -20,8 +20,8 @@
             <div class="lang" id="Francais">Francais</div>
         </div>
         
-            <div class="en">Nancy is strong!</div>
-            <div class="fr">Mais Gaby est encore plus fort!</div>
+            <div class="en"></div>
+            <div class="fr"></div>
 
             <script>
                 $("#English").click(function () {
