--- a/navbar.html
+++ b/navbar.html
@@ -11,7 +11,7 @@
         <div class="navbar-nav">
             <a class="nav-item nav-link" href="index.html">Home</a>
             <a class="nav-item nav-link" href="people.html">People</a>
-            <a class="nav-item nav-link" href="blog.html">Blog</a>
+            <!-- <a class="nav-item nav-link" href="blog.html">Blog</a> -->
 
         </div>
     </div>
