--- a/navbar.html
+++ b/navbar.html
@@ -1,5 +1,5 @@
-<!-- <img src="images/blank.png" style="height:85px;width:80vw;position:fixed;margin-left:20vw"> -->
-<!-- <div style="background-color:#1B1862;height:50px"></div>     -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<script src="js/moodToggle.js"></script>
 <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-fixed-top">
         <!-- <div class="lang" id="English">English | &nbsp </div>
         <div class="lang" id="Francais">Francais</div> -->
@@ -11,8 +11,7 @@
         <div class="navbar-nav">
             <a class="nav-item nav-link" href="index.html">Home</a>
             <a class="nav-item nav-link" href="people.html">People</a>
-            <!-- <a class="nav-item nav-link" href="blog.html">Blog</a> -->
-
         </div>
     </div>
+    <a><i class="fa fa-eye" id="moodToggle" onClick=moodToggle() style="color:white;cursor:pointer"></i></a>
 </nav>
