--- a/navbar.html
+++ b/navbar.html
@@ -1,5 +1,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src="js/moodToggle.js"></script>
+<script src="js/languageToggle.js"></script>
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-fixed-top">
         <!-- <div class="lang" id="English">English | &nbsp </div>
         <div class="lang" id="Francais">Francais</div> -->
@@ -13,5 +15,6 @@
             <a class="nav-item nav-link" href="people.html">People</a>
         </div>
     </div>
+    <a><i class="fa fa-car" id="languageToggle" onClick=languageToggle() style="color:white;cursor:pointer"></i></a>
     <a><i class="fa fa-eye" id="moodToggle" onClick=moodToggle() style="color:white;cursor:pointer"></i></a>
 </nav>
