adding cookies to darkmode toggle

--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
         rel="stylesheet">
 </head>
 
+
 <body>
+    <!-- <div id="banner"></div> -->
     <div id="nav-placeholder"></div>
+    <img src="images/Spaceberry.png" style="height:120px;z-index:99;position:absolute;margin-left:50%">
     <script>
         $(function () {
             $("#nav-placeholder").load("navbar.html")
