fixing some mobile and adding Amber

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <script src="resources/d3.v4.min.js"></script>
     <script src="resources/jquery.js"></script>
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/main.mobile.css">
     <link
         href="https://fonts.googleapis.com/css?family=Arsenal|Assistant|Athiti|Black+And+White+Picture|Coda+Caption|Darker+Grotesque|Encode+Sans|Krona+One|Molengo|Nobile|Pavanam|Ramabhadra|Reem+Kufi|Thasadith&display=swap"
         rel="stylesheet">
@@ -17,7 +19,7 @@
 <body>
     <!-- <div id="banner"></div> -->
     <div id="nav-placeholder"></div>
-    <img src="images/Spaceberry.png" style="height:120px;z-index:99;position:absolute;margin-left:50%">
+    <img src="images/Spaceberry.png" style="height:82px;z-index:99;position:absolute;margin-left:50%">
     <script>
         $(function () {
             $("#nav-placeholder").load("navbar.html")
