--- a/navbar.html
+++ b/navbar.html
@@ -1,3 +1,4 @@
+<meta charset="utf-8">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src="js/moodToggle.js"></script>
 <script src="js/languageToggle.js"></script>
@@ -13,7 +14,11 @@
             <a class="nav-item nav-link" href="index.html">Home</a>
             <a class="nav-item nav-link" href="people.html">People</a>
         </div>
+
     </div>
+    <div style="float:right"> 
     <a><i class="fa fa-car" id="languageToggle" onClick=languageToggle() style="color:white;cursor:pointer"></i></a>
-    <a><i class="fa fa-eye" id="moodToggle" onClick=moodToggle() style="color:white;cursor:pointer"></i></a>
+    &nbsp; &nbsp;
+    <a><i class="fa fa-eye" id="moodToggle" onClick=moodToggle() style="color:white;cursor:pointer"></i></a>    
+</div>
 </nav>
