--- a/people.html
+++ b/people.html
@@ -1,12 +1,14 @@
 <html>
 
 <head>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <script src="resources/d3.v4.min.js"></script>
     <script src="resources/jquery.js"></script>
     <script src="resources/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/main.mobile.css">
     <link rel="stylesheet" href="css/navbar.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="js/moodToggle.js"></script>
@@ -45,9 +47,10 @@
             <br><br><br>
             <h2>Our Organizers</h2>
             <div class="person seattle">
-                <img src="images/portrait.png">
+                <img src="images/people/NancyOrgan.png">
                 <div class="bio">
-                    <div class="name">Nancy Organ </br> Founder and Seattle Organizer</div><br>
+                    <div class="name">Nancy Organ </br> 
+                        Founder and Seattle Organizer</div><br>
                     Nancy started DVJS in June 2016 to create a space for the nascent data vis commuity to come
                     together. She studied Statistics and Biology at UC Berkeley and started her career in Medical
                     research.
@@ -55,7 +58,7 @@
             </div>
 
             <div class="person montreal">
-                <img src="images/JessicaRenaudProfile.jpg">
+                <img src="images/people/JessicaRenaudProfile.jpg">
                 <div class="bio">
                     <div class="name">Jessica Renaud </br>Ambassador in Chief, Montreal</div>
                     <div class="en">
@@ -84,8 +87,19 @@
         <div id="facilitators">
             <h2>Community Facilitators</h2>
             <div class="person">
+                <img src="images/people/AmberThomas.png">
+                <div class="bio">
+                        <div class="name">Amber Thomas </div>
+                        <br>
+                        Amber Thomas is a Senior Journalist Engineer at The Pudding. Her job is to essentially ask questions about the world, find and use data to try to answer those questions, then use visuals and code to explain the answers on the internet. Away from her keyboard she can be found climbing mountains around the Pacific Northwest or sampling every chai latte in Seattle.
+                        https://amber.rbind.io/
+                </div>
+            </div>
+
+            <div class="person">
                 <img src="images/seal.jpg">
                 <div class="bio">
+                    <div class="name">Member</div><br>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                     Ut enim ad minim veniam, quis nostrud exercitation ullamco
@@ -96,16 +110,7 @@
             <div class="person">
                 <img src="images/seal.jpg">
                 <div class="bio">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                    laboris nisi ut aliquip ex ea commodo consequat.
-                </div>
-            </div>
-
-            <div class="person">
-                <img src="images/seal.jpg">
-                <div class="bio">
+                    <div class="name">Member</div><br>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                     Ut enim ad minim veniam, quis nostrud exercitation ullamco
@@ -119,6 +124,7 @@
             <div class='person'>
                 <img src="images/penguin.png">
                 <div class="bio">
+                    <div class="name">Member</div><br>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                     Ut enim ad minim veniam, quis nostrud exercitation ullamco
@@ -129,6 +135,7 @@
             <div class='person'>
                 <img src="images/penguin.png">
                 <div class="bio">
+                    <div class="name">Member</div><br>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                     Ut enim ad minim veniam, quis nostrud exercitation ullamco
@@ -139,6 +146,7 @@
             <div class='person'>
                 <img src="images/penguin.png">
                 <div class="bio">
+                    <div class="name">Member</div><br>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                     Ut enim ad minim veniam, quis nostrud exercitation ullamco
@@ -149,6 +157,7 @@
             <div class='person'>
                 <img src="images/penguin.png">
                 <div class="bio">
+                    <div class="name">Member</div><br>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                     Ut enim ad minim veniam, quis nostrud exercitation ullamco
@@ -159,6 +168,7 @@
             <div class='person'>
                 <img src="images/penguin.png">
                 <div class="bio">
+                    <div class="name">Member</div><br>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                     Ut enim ad minim veniam, quis nostrud exercitation ullamco
@@ -169,6 +179,7 @@
             <div class='person'>
                 <img src="images/penguin.png">
                 <div class="bio">
+                    <div class="name">Member</div><br>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                     Ut enim ad minim veniam, quis nostrud exercitation ullamco
