Adding clearer tooltips to ions and Github link

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
             <br><br>
             <h4>But please remember…</h4>
-            <b>Monitor the volume.</b> This can be a noisy space but if we all speak softly the we can all feel heard.
+            <b>Monitor the volume.</b> This can be a noisy space but if we all speak softly theb we can all feel heard.
             <br>
             <b>Respect different working styles. </b>Some folks prefer to focus and that’s totally fine! If you’re
             feeling chatty there will always be someone else to share with.
