--- a/navbar.html
+++ b/navbar.html
@@ -13,12 +13,13 @@
         <div class="navbar-nav">
             <a class="nav-item nav-link" href="index.html">Home</a>
             <a class="nav-item nav-link" href="people.html">People</a>
+            <a class="nav-item nav-link" href="https://github.com/nancyorgan/SpaceBerries">Contribute</a>
         </div>
 
     </div>
     <div style="float:right"> 
-    <a><i class="fa fa-car" id="languageToggle" onClick=languageToggle() style="color:white;cursor:pointer"></i></a>
+    <a title="Language"><i class="fa fa-plane" id="languageToggle" onClick=languageToggle() style="color:white;cursor:pointer"></i></a>
     &nbsp; &nbsp;
-    <a><i class="fa fa-eye" id="moodToggle" onClick=moodToggle() style="color:white;cursor:pointer"></i></a>    
+    <a title="Dark mode"><i class="fa fa-eye" id="moodToggle" onClick=moodToggle() style="color:white;cursor:pointer"></i></a>    
 </div>
 </nav>
