--- a/people.html
+++ b/people.html
@@ -30,7 +30,7 @@
     <script>
         verifyDark();
     </script>
-            <!-- <div class="lang" id="English">English</div>
+    <!-- <div class="lang" id="English">English</div>
             <div class="lang" id="Francais">Francais</div>
             <script>
                     $("#English").click(function () {
@@ -49,8 +49,9 @@
             <div class="person seattle">
                 <img src="images/people/NancyOrgan.png">
                 <div class="bio">
-                    <div class="name">Nancy Organ </br> 
-                        Founder and Seattle Organizer</div><br>
+                    <div class="name">Nancy Organ </br>
+                        Founder and Seattle Organizer</div>
+                        <div class="portfolio"><a href="www.nancyorgan.com">www.nancyorgan.com</a></div><br>
                     Nancy started DVJS in June 2016 to create a space for the nascent data vis commuity to come
                     together. She studied Statistics and Biology at UC Berkeley and started her career in Medical
                     research.
@@ -62,7 +63,7 @@
                 <div class="bio">
                     <div class="name">Jessica Renaud </br>Ambassador in Chief, Montreal</div>
                     <div class="en">
-                            <br>
+                        <br>
                         Torn between her love of numbers and the visual arts for (almost) ever, Jessica has been able to
                         reconcile her two passions with data visualization. For the past two years, she has been working
                         to promote the subject in Montreal, as Ambassador in Chief of the Data Viz Jam Session, and
@@ -89,32 +90,13 @@
             <div class="person">
                 <img src="images/people/AmberThomas.png">
                 <div class="bio">
-                        <div class="name">Amber Thomas </div>
-                        <br>
-                        Amber Thomas is a Senior Journalist Engineer at The Pudding. Her job is to essentially ask questions about the world, find and use data to try to answer those questions, then use visuals and code to explain the answers on the internet. Away from her keyboard she can be found climbing mountains around the Pacific Northwest or sampling every chai latte in Seattle.
-                        https://amber.rbind.io/
-                </div>
-            </div>
-
-            <div class="person">
-                <img src="images/seal.jpg">
-                <div class="bio">
-                    <div class="name">Member</div><br>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                    laboris nisi ut aliquip ex ea commodo consequat.
-                </div>
-            </div>
-
-            <div class="person">
-                <img src="images/seal.jpg">
-                <div class="bio">
-                    <div class="name">Member</div><br>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                    laboris nisi ut aliquip ex ea commodo consequat.
+                    <div class="name">Amber Thomas </div>
+                    <div class="portfolio"><a href="https://amber.rbind.io/">https://amber.rbind.io/</a></div><br>
+                    Amber Thomas is a Senior Journalist Engineer at The Pudding. Her job is to essentially ask questions
+                    about the world, find and use data to try to answer those questions, then use visuals and code to
+                    explain the answers on the internet. Away from her keyboard she can be found climbing mountains
+                    around the Pacific Northwest or sampling every chai latte in Seattle.
+                    https://amber.rbind.io/
                 </div>
             </div>
         </div>
@@ -122,13 +104,42 @@
         <div id="community">
             <h2>The Community</h2>
             <div class='person'>
-                <img src="images/penguin.png">
+                <img src="images/people/LindsayJuarez.jpg">
                 <div class="bio">
-                    <div class="name">Member</div><br>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                    laboris nisi ut aliquip ex ea commodo consequat.
+                    <div class="name">Lindsay Juarez</div>
+                    <div class="portfolio"><a href="www.lindsayjuarez.com">www.lindsayjuarez.com</a></div><br>
+                    Lindsay is a behavioral scientist with a Ph.D. in social psychology. She focuses on using data to
+                    design and test behavioral interventions to make people happier, healthier, and wealthier. She's
+                    worked with groups that range from small meditation start-ups to national banks and healthcare
+                    companies which means that clear data visualization and communication is key. She loves a beautiful
+                    plot.
+                </div>
+            </div>
+
+            <div class='person'>
+                <img src="images/people/NeisyWilson.jpg">
+                <div class="bio">
+                    <div class="name">Neisy Wilson</div>
+                    <div class="portfolio"><a href="https://github.com/yirini">https://github.com/yirini</a></div><br>
+                    <div class="en">Neisy Wilson is a self taught data analyst with a programming background. She has
+                        been learning Python, Pandas, Numpy and Matplotlib.
+                    </div>
+                    <div class="fr">
+                        Neisy Wilson est une analyste de données autodidacte, avec une formation en programmation.
+                    </div>
+                </div>
+
+            </div>
+
+            <div class='person'>
+                <img src="images/people/RalphSpandl.jpg">
+                <div class="bio">
+                    <div class="name">Ralph Spandl </div>
+                    <div class="portfolio"><a href="www.r42.ca">www.r42.ca</a></div><br>
+                    After 25 years and countless projects in web and UX design, Ralph decided to specialize in the
+                    absolutely fascinating domain of data visualization. With his extensive background in front-end web
+                    development he is now concentrating on creating custom visualizations for Google Data Studio and the
+                    web in general.
                 </div>
             </div>
 
@@ -136,56 +147,21 @@
                 <img src="images/penguin.png">
                 <div class="bio">
                     <div class="name">Member</div><br>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                    laboris nisi ut aliquip ex ea commodo consequat.
+                    <div class="en">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                        laboris nisi ut aliquip ex ea commodo consequat.
+                    </div>
+                    <div class="fr">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                        laboris nisi ut aliquip ex ea commodo consequat.
+                    </div>
                 </div>
             </div>
 
-            <div class='person'>
-                <img src="images/penguin.png">
-                <div class="bio">
-                    <div class="name">Member</div><br>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                    laboris nisi ut aliquip ex ea commodo consequat.
-                </div>
-            </div>
-
-            <div class='person'>
-                <img src="images/penguin.png">
-                <div class="bio">
-                    <div class="name">Member</div><br>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                    laboris nisi ut aliquip ex ea commodo consequat.
-                </div>
-            </div>
-
-            <div class='person'>
-                <img src="images/penguin.png">
-                <div class="bio">
-                    <div class="name">Member</div><br>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                    laboris nisi ut aliquip ex ea commodo consequat.
-                </div>
-            </div>
-
-            <div class='person'>
-                <img src="images/penguin.png">
-                <div class="bio">
-                    <div class="name">Member</div><br>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                    laboris nisi ut aliquip ex ea commodo consequat.
-                </div>
-            </div>
         </div>
     </div>
     <br><br><br>
