Add Andrew's bio

--- a/people.html
+++ b/people.html
@@ -146,6 +146,17 @@
             <div class='person'>
                 <img src="images/penguin.png">
                 <div class="bio">
+                    <div class="name">Andrew Bales</div>
+                    <div class="portfolio"><a href="https://agbales.github.io/portfolio/"></a></div><br>
+                    <div class="en">A creative technologist with a Ph.D. in creative writing, Andrew loves finding 
+                    stories in data, creating digital art, and exploring technologies to build intuitive, meaningful 
+                    services.</div>
+                </div>
+            </div>
+
+            <div class='person'>
+                <img src="images/penguin.png">
+                <div class="bio">
                     <div class="name">Member</div><br>
                     <div class="en">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit,
