Add portfolio URL

--- a/people.html
+++ b/people.html
@@ -147,7 +147,7 @@
                 <img src="images/agbales.jpg">
                 <div class="bio">
                     <div class="name">Andrew Bales</div>
-                    <div class="portfolio"><a href="https://agbales.github.io/portfolio/"></a></div><br>
+                    <div class="portfolio"><a href="https://agbales.github.io/portfolio/">agbales.github.io/portfolio</a></div><br>
                     <div class="en">A creative technologist with a Ph.D. in creative writing, Andrew loves finding 
                     stories in data, creating digital art, and exploring technologies to build intuitive, meaningful 
                     services.</div>
